--- a/AnimalSpotter/AnimalSpotter/Storyboards/Base.lproj/Main.storyboard
+++ b/AnimalSpotter/AnimalSpotter/Storyboards/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="19529" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="19529" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="qst-VQ-te8">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="19519"/>
@@ -8,20 +8,133 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
+        <!--Root View Controller-->
+        <scene sceneID="qyV-uV-pNI">
+            <objects>
+                <tableViewController id="Glt-b3-V5v" sceneMemberID="viewController">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" id="Dw0-Oe-ro4">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <prototypes>
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" id="YOR-Sm-aiq">
+                                <rect key="frame" x="0.0" y="44.5" width="414" height="43.5"/>
+                                <autoresizingMask key="autoresizingMask"/>
+                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="YOR-Sm-aiq" id="Lda-jP-bMG">
+                                    <rect key="frame" x="0.0" y="0.0" width="414" height="43.5"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                </tableViewCellContentView>
+                                <connections>
+                                    <segue destination="A70-wn-UTi" kind="show" id="vcW-Ej-ROW"/>
+                                </connections>
+                            </tableViewCell>
+                        </prototypes>
+                        <connections>
+                            <outlet property="dataSource" destination="Glt-b3-V5v" id="lfH-Er-Xg5"/>
+                            <outlet property="delegate" destination="Glt-b3-V5v" id="GxP-Gp-up3"/>
+                        </connections>
+                    </tableView>
+                    <navigationItem key="navigationItem" title="Root View Controller" id="Tqa-F3-6ci"/>
+                    <connections>
+                        <segue destination="BYZ-38-t0r" kind="presentation" id="uIq-Xq-qLH"/>
+                    </connections>
+                </tableViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="0XA-ST-b51" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-1509" y="417"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="JDZ-hZ-UrJ">
+            <objects>
+                <navigationController id="qst-VQ-te8" sceneMemberID="viewController">
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="fkr-Uu-CEM">
+                        <rect key="frame" x="0.0" y="44" width="414" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <connections>
+                        <segue destination="Glt-b3-V5v" kind="relationship" relationship="rootViewController" id="HBc-vI-xlU"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="kYb-Nq-9nD" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-2958" y="417"/>
+        </scene>
         <!--Loggin View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
                 <viewController id="BYZ-38-t0r" customClass="LogginViewController" customModule="AnimalSpotter" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="842"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" spacing="34" translatesAutoresizingMaskIntoConstraints="NO" id="oFV-YV-v0U">
+                                <rect key="frame" x="16" y="16" width="382" height="232"/>
+                                <subviews>
+                                    <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="bbp-2X-NRw">
+                                        <rect key="frame" x="125.5" y="0.0" width="131" height="32"/>
+                                        <segments>
+                                            <segment title="Sign up"/>
+                                            <segment title="Sign in"/>
+                                        </segments>
+                                    </segmentedControl>
+                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Username" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="pnQ-BA-R9u">
+                                        <rect key="frame" x="0.0" y="65" width="382" height="34"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                        <textInputTraits key="textInputTraits"/>
+                                    </textField>
+                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Password" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="sTT-ov-WY4">
+                                        <rect key="frame" x="0.0" y="133" width="382" height="34"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                        <textInputTraits key="textInputTraits"/>
+                                    </textField>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="rds-tS-RmA">
+                                        <rect key="frame" x="154.5" y="201" width="73" height="31"/>
+                                        <state key="normal" title="Button"/>
+                                        <buttonConfiguration key="configuration" style="plain" title="Sign up"/>
+                                    </button>
+                                </subviews>
+                                <constraints>
+                                    <constraint firstItem="pnQ-BA-R9u" firstAttribute="leading" secondItem="oFV-YV-v0U" secondAttribute="leading" id="8mO-jj-cnH"/>
+                                    <constraint firstAttribute="trailing" secondItem="pnQ-BA-R9u" secondAttribute="trailing" id="Non-2k-qhZ"/>
+                                    <constraint firstItem="sTT-ov-WY4" firstAttribute="leading" secondItem="oFV-YV-v0U" secondAttribute="leading" id="VTG-el-Viu"/>
+                                    <constraint firstAttribute="trailing" secondItem="sTT-ov-WY4" secondAttribute="trailing" id="f0p-XX-Bn2"/>
+                                </constraints>
+                            </stackView>
+                        </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="oFV-YV-v0U" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="16" id="MYX-fQ-GU0"/>
+                            <constraint firstItem="oFV-YV-v0U" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="16" id="hLg-3R-ulV"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="oFV-YV-v0U" secondAttribute="trailing" constant="16" id="spD-0X-v7m"/>
+                        </constraints>
                     </view>
+                    <connections>
+                        <outlet property="logginTypeSegmentedControl" destination="bbp-2X-NRw" id="a9c-I5-W1n"/>
+                        <outlet property="passwordTextField" destination="sTT-ov-WY4" id="PsB-cS-jqx"/>
+                        <outlet property="signInButton" destination="rds-tS-RmA" id="86p-ii-su5"/>
+                        <outlet property="usernameTextField" destination="pnQ-BA-R9u" id="dRe-GT-RR9"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="139" y="129"/>
+            <point key="canvasLocation" x="-623" y="-340"/>
+        </scene>
+        <!--View Controller-->
+        <scene sceneID="usx-ff-cuX">
+            <objects>
+                <viewController id="A70-wn-UTi" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="vdl-TI-uu3">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <viewLayoutGuide key="safeArea" id="WFE-xg-egq"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                    </view>
+                    <navigationItem key="navigationItem" id="ftD-eM-8uI"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="5M3-qM-kog" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="443" y="417"/>
         </scene>
     </scenes>
     <resources>
