--- a/AnimalSpotter/AnimalSpotter/Storyboards/Base.lproj/Main.storyboard
+++ b/AnimalSpotter/AnimalSpotter/Storyboards/Base.lproj/Main.storyboard
@@ -11,7 +11,7 @@
         <!--Root View Controller-->
         <scene sceneID="qyV-uV-pNI">
             <objects>
-                <tableViewController id="Glt-b3-V5v" sceneMemberID="viewController">
+                <tableViewController id="Glt-b3-V5v" customClass="AnimalTableViewController" customModule="AnimalSpotter" customModuleProvider="target" sceneMemberID="viewController">
                     <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" id="Dw0-Oe-ro4">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -120,10 +120,10 @@
             </objects>
             <point key="canvasLocation" x="-623" y="-340"/>
         </scene>
-        <!--View Controller-->
+        <!--Animal Detail View Controller-->
         <scene sceneID="usx-ff-cuX">
             <objects>
-                <viewController id="A70-wn-UTi" sceneMemberID="viewController">
+                <viewController id="A70-wn-UTi" customClass="AnimalDetailViewController" customModule="AnimalSpotter" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="vdl-TI-uu3">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
